chinese homepage done

--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -50,8 +50,8 @@
 					<!-- donate button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
-								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-6 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
+								<span class="text-[1.05rem] text-white transition-colors duration-200"> 捐赠 </span>
 							</button>
 						</div>
 					</div>
@@ -61,7 +61,7 @@
 						<li class="relative text-[1.05rem]">
 							<!-- language btn -->
 							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-400 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> English </span>
+								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> 简体中文 </span>
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -75,7 +75,7 @@
 								<!-- text -->
 								<ul class="space-y-4">
 									<li>
-										<a href="/lang/cn" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 简体中文 </a>
+										<a href="/" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 									<li>
 										<a href="/lang/ru" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Русский </a>
@@ -139,16 +139,16 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
-					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
+					<a href="../" class="block text-gray-600 dark:text-gray-300">主页 </a>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">下载 </a>
+					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
+					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
+					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">简体中文</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -156,10 +156,11 @@
 							</svg>
 						</div>
 					</button>
+
 					<!-- mobile language menu -->
 					<div class="mobile-language-menu hidden rounded-lg">
 						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
-							<a href="/lang/cn">简体中文</a>
+							<a href="/">English</a>
 							<a href="/lang/ru">Pусский</a>
 							<a href="/lang/de">Deutsch</a>
 							<a href="/lang/jp">ホーム </a>
@@ -170,7 +171,7 @@
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block text-gold">Donate</button>
+					<button class="mobile-donate-button block text-gold">捐赠</button>
 				</div>
 			</div>
 		</nav>
