--- a/public/lang/cn/changelog/index.html
+++ b/public/lang/cn/changelog/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>Changelog</title>
+		<title>更新日志</title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
 		<script src="/js/local-storage-track.js"></script>
@@ -183,9 +183,9 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Changelog</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">更新日志 </span>
 				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
-					<p>Changelog</p>
+					<p>更新日志</p>
 				</span>
 			</header>
 
@@ -277,7 +277,7 @@
 
 				<!-- right side -->
 				<div class="flex flex-col">
-					<div class="h-20"><p class="text-sm">More new features are under development...</p></div>
+					<div class="h-20"><p class="text-sm">更多的新功能正在开发中...</p></div>
 
 					<!-- 0.7.3 -->
 					<!-- copy for latest release -->
@@ -295,23 +295,22 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>Game controller key mapping for games that don’t support gamepads (NOTICE: Genshin Impact's native controller support is not working for now)</li>
-										<li>Fixed bug of mouse reset on Burst (Ultimate) in Genshin Impact</li>
-										<li>Fixed bug of mouse reset on Burst (Ultimate) in Genshin Impact</li>
-										<li>Smoother mouse movement</li>
-										<li>Fixed improper scaling in Windowed mode (edited)</li>
-										<li>App launcher now allows you run apps directly from PlayCover</li>
-										<li>With 'Update PlayTools' context-menu option you can install new versions of in-game controls without reinstalling the whole app</li>
-										<li>If something goes wrong, you can erase PlayTools settings with 'Reset PlayTools settings' option instead of whole app cache clear</li>
-										<li>'Downloads' tab of sidebar contains links for latest decrypted app versions (I will extended this list and make this dynamic next update)</li>
-										<li>Fixed error with iCloud / Dropbox documents syncing folders</li>
-										<li>Now sidebar has fixed min width and also app has new minimum size</li>
-										<li>Improved downloads UI, so it will provide download link based on your region</li>
-										<li>Improved Settings Ui, so now you can copy the command</li>
-										<li>Multi-lang Support</li>
-										<li>Fixed crash on startup for some users</li>
-										<li>Now Alt/Option button also hides/shows menu bar, so you can easily access settings of Window control buttons</li>
-										<li>PlayCover shows a notification when finished installing an app</li>
+										<li>不支持游戏手柄的游戏的游戏控制器键映射（注意：Genshin Impact 的本机控制器支持目前不起作用）</li>
+										<li>修复了元神冲击中爆发（终极）时鼠标重置的错误</li>
+										<li>更流畅的鼠标移动</li>
+										<li>修复了窗口模式下不正确的缩放（已编辑）</li>
+										<li>应用启动器现在允许您直接从 PlayCover 运行应用</li>
+										<li>使用“更新 PlayTools”上下文菜单选项，您无需重新安装整个应用程序即可安装新版本的游戏内控件</li>
+										<li>如果出现问题，您可以使用“重置 PlayTools 设置”选项清除 PlayTools 设置，而不是清除整个应用程序缓存</li>
+										<li>侧边栏的“下载”选项卡包含最新解密应用程序版本的链接（我将扩展此列表并在下次更新时进行动态更新）</li>
+										<li>修复了 iCloud / Dropbox 文档同步文件夹的错误</li>
+										<li>现在侧边栏有固定的最小宽度，应用程序也有新的最小尺寸</li>
+										<li>改进了下载用户界面，因此它将根据您所在的地区提供下载链接</li>
+										<li>改进了设置用户界面，现在您可以复制命令</li>
+										<li>多语言支持</li>
+										<li>修复了某些用户启动时崩溃的问题</li>
+										<li>现在 Alt/Option 按钮还隐藏/显示菜单栏，因此您可以轻松访问窗口控制按钮的设置</li>
+										<li>PlayCover 在完成安装应用程序时显示通知</li>
 									</ul>
 								</div>
 							</div>
@@ -321,7 +320,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.7.3" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.7.3" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.6.2 -->
@@ -341,18 +340,18 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>Keymapping elements will resize on window size change</li>
-										<li>Special indicator will be shown on entering and leaving editor mode</li>
-										<li>All parent UIViews scale properly (web announcements inside Genshin Impact are fixed, some games as such as Genshin Impact currently require restarting for proper scale after window change)</li>
-										<li>Fixed MenuBar that covered game window in Windowed mode</li>
-										<li>Resolved problem of not saving key mappings for some users</li>
-										<li>Fixed crash on entering party menu in Genshin Impact for some users</li>
-										<li>Improved graphics in 3x times</li>
-										<li>Total average memory usage by games decreased by x2 times</li>
-										<li>Fixed problem when camera movement vanished after cutscene</li>
-										<li>Camera now properly appears after mapping without additional manipulations</li>
-										<li>Now PlayCover contains automated crashes report system, which works not only inside app, but also every game converted with PlayCover</li>
-										<li>Started migrate games settings to PlayCover for syncing and easily management</li>
+										<li>窗口大小改变时，按键映射元素将自动调整大小</li>
+										<li>在进入和离开编辑模式时，将显示提示文字</li>
+										<li>所有父级UIView都能正确缩放（原神内的网页公告已被修复，一些游戏，如原神目前需要重启以在窗口改变后获得正确的缩放。</li>
+										<li>修正了在窗口模式下覆盖游戏窗口的菜单栏。</li>
+										<li>解决了一些用户不能保存键位映射的问题。</li>
+										<li>修正了某些用户在进入原神后的队伍配置菜单时的崩溃问题</li>
+										<li>提高了3倍图形性能</li>
+										<li>游戏的总平均内存使用量减少了x2倍</li>
+										<li>修正了视角拖动在过场后无法使用的问题</li>
+										<li>视角现在可以在映射后后正确出现，无需额外操作</li>
+										<li>新增自动崩溃报告系统，该系统不仅在PlayCover内工作，而且在用PlayCover转换的每个游戏中会自动工作。</li>
+										<li>开始将游戏设置迁移到PlayCover，以便同步和方便管理。</li>
 									</ul>
 								</div>
 							</div>
@@ -362,7 +361,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.2" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.2" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.6.1 -->
@@ -381,9 +380,9 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>This release contains the most common bug fixes of 0.6.0</li>
-										<li>NSInvocation Dynamic error on launch solved</li>
-										<li>Resolved problem when dock and menu bars sometimes are not hidden in Fullscreen mode</li>
+										<li>该版本包含了0.6.0版本中最常见bug的修复</li>
+										<li>解决了启动时NSInvocation动态错误问题</li>
+										<li>解决了在全屏模式下，Dock和菜单栏有时不被隐藏的问题。</li>
 									</ul>
 								</div>
 							</div>
@@ -393,7 +392,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.1" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.1" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.6.0 -->
@@ -412,19 +411,19 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>'Fix login' option is now available for everyone. Follow <a href="https://www.youtube.com/watch?v=H3CoI84s_FI&t=94s" target="_blank" class="underline">video instruction</a> to use it. Also you can find <a href="https://www.applegamingwiki.com/wiki/PlayCover" target="_blank" class="underline">text version</a> here. If you have any problems, please, click on 'Troubleshoot' button. Be aware that all this you perform at your own responsibility, I am providing help with this method only for Supporters.</li>
-										<li>App decryption was significantly improved since last release</li>
-										<li>Keymapping elements are now saved properly. No more random vanishing.</li>
-										<li>Now dock and menu dock are hidden during Gaming mode. Press Alt or Option to switch between modes.</li>
-										<li>Fixed bug with mouse stuck after cutscenes in game</li>
-										<li>Alternative decryption method is now available for everyone</li>
-										<li>LMB / RMB / MMB bind (use Shift + R , L, M to bind)</li>
-										<li>Auto screen resize. Now screen will be resized automatically in such games as Wildrift, Among Us e.t.c. No more broken resolution</li>
-										<li>However if you would like to set custom resolution, you can use Shift + Arrows to move screen, or Shift + '+' / '-' to change screen width. Or Control + Shift + '+' / '-' to change screen height</li>
-										<li>External mouse users be aware, that right now you should unplug the mouse after each setup. I'll make feature to select Trackpad/ Mouse optionally in future</li>
-										<li>Intel user notice</li>
-										<li>Now to show or hide cursor, you will just need to press 'Alt' button. No need to hold anymore</li>
-										<li>Various UI bugs were fixed</li>
+										<li>「登录修复」选项现在对每个人都可用，请按照 <a href="https://www.youtube.com/watch?v=H3CoI84s_FI&t=94s" target="_blank" class="underline">视频说明</a> 使用它。你也可以找到 <a href="https://www.applegamingwiki.com/wiki/PlayCover" target="_blank" class="underline">文字版</a> 这里。 如果你有任何问题，请点击「troubleshoot」按钮。请注意，勾选修复登录选项后出现的任何问题你需要自己负责，我们不承担任何责任。</li>
+										<li>自上次发布以来，应用程序的解密得到了明显的改善</li>
+										<li>按键映射现在可以正确保存，不再有随机消失的情况。</li>
+										<li>现在在游戏模式下，Dock和菜单Dock被隐藏。按Alt或Option键可以在鼠标指针/视角拖动模式间切换。</li>
+										<li>修正了在游戏中切入场景后鼠标卡住的Bug</li>
+										<li>现在每个人都可以使用替代的解密方法</li>
+										<li>鼠标左键/中键/右键映射（使用 Shift + R/L/M 绑定）。</li>
+										<li>自动调整屏幕大小。现在，在诸如《Wildrift》、《Among Us》等游戏中，屏幕会自动调整大小，不会再出现分辨率异常的情况</li>
+										<li>如果你想设置自定义分辨率，你可以使用Shift + 箭头来移动屏幕，或Shift + '+' / '-' 来改变屏幕宽度，或者用Control + Shift + '+' / '-' 来改变屏幕高度。</li>
+										<li>使用外置鼠标的用户应在每次设置后拔掉鼠标后重新接入。 在未来我们将制作选择触控板/鼠标的功能。</li>
+										<li>英特尔用户需知</li>
+										<li>现在要显示或隐藏光标，你只需要按「Alt」键，不需要持续按住。</li>
+										<li>修复了各种用户界面的错误</li>
 									</ul>
 								</div>
 							</div>
@@ -434,7 +433,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.0" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.0" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.5.0 -->
@@ -453,9 +452,9 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>For those apps which currently crashes there is a new checkbox. Now you can export such apps for Sideloadly and then install on Mac</li>
-										<li>iOS support. With PlayCover, you can also play any game with Mouse & Keyboard support. Just enable them in Assistive Touch menu. Fullscreen is ofc disabled</li>
-										<li>System specific bug fixes</li>
+										<li>对于目前会崩溃的应用程序，有一个新的复选框。现在你可以将这些应用使用侧载方式安装到Mac上。</li>
+										<li>使用侧载安装iOS应用，仍还可以使用鼠标和键盘的游玩游戏。只需在「辅助性触摸」菜单中启用它们。当然，全屏是禁用的。</li>
+										<li>系统特定错误修复</li>
 									</ul>
 								</div>
 							</div>
@@ -465,7 +464,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.5.0" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.5.0" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.4.0 -->
@@ -484,12 +483,12 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>In this release you still can't decrypt some apps, but this system was massively improved</li>
-										<li>If you have decryption error, please download .ipa from AppDb</li>
-										<li>Better error handling for decryption</li>
-										<li>New decryption method</li>
-										<li>New patch method</li>
-										<li>Now app will clear cache on crash</li>
+										<li>在这个版本中，你仍然无法解密一些应用程序，但解密系统得到了很大的改进。</li>
+										<li>如果你遇到解密错误，请从AppDb下载ipa。</li>
+										<li>更好地处理解密的错误</li>
+										<li>新的解密方法</li>
+										<li>新的补丁方法</li>
+										<li>现在应用程序会在崩溃时清除缓存</li>
 									</ul>
 								</div>
 							</div>
@@ -499,7 +498,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.4.0" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.4.0" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.1.1 -->
@@ -518,10 +517,10 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>Now you are able to use .ipa from iMazing or M1 Checker</li>
-										<li>Keymapping fix</li>
-										<li>Dynamic screen support</li>
-										<li>Fixed file open crashes</li>
+										<li>现在你可以使用iMazing或M1 Checker的.ipa了。</li>
+										<li>修复了键盘映射</li>
+										<li>动态屏幕支持</li>
+										<li>修复了文件打开崩溃的问题</li>
 									</ul>
 								</div>
 							</div>
@@ -531,7 +530,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.1.1" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.1.1" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.1.0-fix -->
@@ -550,11 +549,11 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>Fixed endless loading bug on discard File Open dialog</li>
-										<li>Improved log system (real time)</li>
-										<li>Optionally Fullscreen</li>
-										<li>Fixed bug when opened .ipa file will be deleted</li>
-										<li>Now app will be save in Documents/PlayCover folder</li>
+										<li>修复了打开丢弃文件对话框的无尽加载错误</li>
+										<li>改进了日志系统（实时）</li>
+										<li>可选择全屏</li>
+										<li>修正了打开的ipa文件会被删除的问题</li>
+										<li>现在应用程序将被保存在Documents/PlayCover文件夹中。</li>
 									</ul>
 								</div>
 							</div>
@@ -564,7 +563,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.1.0-fix" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.1.0-fix" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.1.0-beta -->
@@ -583,10 +582,10 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>Now you can import decrypted .ipa directly</li>
-										<li>Fixed "System Error 4"</li>
-										<li>Fixed bug with copying system files to zip</li>
-										<li>Fixed bug with "Minimum required OS version is 13.0"</li>
+										<li>现在你可以直接导入已解密的.ipa文件</li>
+										<li>修正了 「系统错误4」</li>
+										<li>修正了将系统文件复制到zip压缩包中的错误</li>
+										<li>修正了「最低要求的操作系统版本是13.0 」的问题</li>
 									</ul>
 								</div>
 							</div>
@@ -596,7 +595,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.1.0-beta" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.1.0-beta" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 
 					<!-- 0.0.2-alpha -->
@@ -615,12 +614,12 @@
 								<!-- release notes -->
 								<div>
 									<ul class="text-sm space-y-2">
-										<li>This release just to publish source code</li>
-										<li>Fixed "App cannot be opened" error</li>
-										<li>Now the app is able to open any decrypted .app file ( you can find them by downloading .ipa from AppDb, renaming .ipa to .zip and extracting it)</li>
-										<li>Fullscreen and game controller currently not functional</li>
-										<li>Fixed icon size</li>
-										<li>Added debug log</li>
+										<li>这个版本只是为了发布源代码</li>
+										<li>修正了「应用程序不能被打开」的错误</li>
+										<li>现在应用程序可以加载任何已解密的app文件（你可以通过从AppDb下载.ipa，将.ipa重命名为.zip并解压来找到它们） it)</li>
+										<li>目前尚未支持全屏和游戏手柄</li>
+										<li>修正了图标大小</li>
+										<li>添加了调试日志</li>
 									</ul>
 								</div>
 							</div>
@@ -630,7 +629,7 @@
 						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
 
 						<!-- github release button -->
-						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.0.2-alpha" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.0.2-alpha" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub 发布</a>
 					</article>
 				</div>
 			</section>
